# Bass-Master

./: .gitignore  Cargo.toml  INFO.md  README.md
assets/levels/built_in/: Bass_Master_Level_Test.ldtk  Everlong.json  Everlong_Snippet.json  Everlong_Snippet.ldtk  Main_Menu.ldtk  MyHero.json  MyHero.ldtk
assets/stylesheets/: Bass.ess
assets/textures/Bass_Tablature/: dynamic_assets.assets.ron
assets/textures/animations/: Portal-Out.aseprite
src/: animations.rs  bass_ui.rs  camera.rs  input.rs  level.rs  level_loader.rs  load.rs  load_screen.rs  main.rs  menu.rs  player.rs  player_input.rs  player_movement.rs  song.rs  systems.rs
src/bass/: mod.rs  pitch_detector.rs  samples.rs
src/ui/: bass_ui.rs  load_screen.rs  menu.rs  mod.rs  score.rs
