[package]
name = "bass_master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.0", features = ["wav"]}
bevy_asset_loader = {version = "0.17", features = ["2d", "standard_dynamic_assets"]}
bevy_ecs_ldtk = "0.8.0"
bevy_ecs_tilemap = "0.11.0"
serde = "1.0.195"
serde_json = "1.0.111"
belly = { git = "https://github.com/jkb0o/belly.git" }
winit = "0.28.7"
image = "0.24.7"
